default.css
/*Variables*/

:root {
  --deftraback: rgba(229, 9, 20, 0.2) !important;
  --rounding: 5px;
  --accent: #e50914;
}

/*Highlight*/

::-moz-selection {
  background: var(--accent);
  text-shadow: none;
}

::selection {
  background: var(--accent);
  text-shadow: none;
}

/*fieldset*/

fieldset.verticalSection.verticalSection-extrabottompadding {
  border-radius: var(--rounding);
  border-color: #4d4d4d;
}

/*Square Cards and Portrait Cards*/

#loginPage .squareCard {
  width: 50% !important;
}

.emby-input:focus,
.emby-textarea:focus {
  border-color: var(--accent);
}

#itemDetailPage
  button.cardImageContainer.coveredImage.cardContent.itemAction.lazy.blurhashed.lazy-image-fadein-fast {
  border-radius: 5px;
}

/*cardbox border-radius change*/

#indexPage
  button.cardImageContainer.cardContent.itemAction.lazy.blurhashed.lazy-image-fadein-fast,
.emby-scroller button.cardImageContainer.coveredImage.cardContent,
.childrenItemsContainer button.cardImageContainer.coveredImage.cardContent,
.nextUpItems
  button.cardImageContainer.cardContent.itemAction.lazy.blurhashed.lazy-image-fadein-fast,
.vertical-wrap button.cardImageContainer.coveredImage.cardContent,
.emby-scroller button.cardImageContainer {
  border-radius: 5px 5px 0px 0px !important;
}

.cardBox:not(.visualCardBox) .cardPadder,
.cardContent-shadow {
  box-shadow: none;
}

.itemProgressBar {
  background: none;
  height: 928em;
}

.emby-checkbox:checked + span + .checkboxOutline {
  background-color: var(--deftraback) !important;
}

/*Theming video page*/

.videoOsdBottom {
  font-size: 110%;
}

.osdHeader {
  background: linear-gradient(
    180deg,
    rgba(16, 16, 16, 0.75),
    rgba(16, 16, 16, 0)
  ) !important;
}

.layout-desktop .osdControls {
  max-width: 100%;
}

.mdl-slider::-webkit-slider-thumb {
  background: var(--accent);
}

/*Top Bar Transparent*/

body.force-scroll {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: stretch;
  justify-content: flex-start;
  overflow: hidden;
}

.skinHeader {
  position: static;
  width: 100%;
  align-self: flex-start;
}

.mainAnimatedPages {
  height: 100vh;
  position: relative !important;
  overflow: hidden;
}

.libraryPage:not(.noSecondaryNavPage) {
  padding: 0 !important;
}

@media (min-width: 40em) {
  .dashboardDocument .skinBody {
    left: 20em;
    width: calc(100vw - 20em);
  }
}

div[data-role="page"] {
  margin: 0 !important;
  padding: 0 !important;
  position: static;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}

.layout-tv .mainAnimatedPages {
  overflow: visible;
  mask: none;
  -webkit-mask: none;
}

div#videoOsdPage {
  overflow: hidden !important;
  margin-top: 0 !important;
  -webkit-mask: none !important;
  mask: none !important;
}

div[data-role="page"]:not(.withTabs) {
  margin-top: 0 !important;
}

.skinHeader-withBackground {
  background-color: rgba(0, 0, 0, 0) !important;
}

/*Theming Indicators*/

.playedIndicator,
.countIndicator {
  border-radius: 5px;
  box-shadow: 0 0 15px -2px black;
}

.countIndicator,
.fullSyncIndicator,
.playedIndicator {
  background: #ffffffad;
  color: var(--accent);
}

.playedIndicator {
  background: var(--accent);
  color: white;
  box-shadow: 0 0 15px -2px black;
}

button.emby-tab-button.emby-button.emby-tab-button-active:hover {
  color: var(--accent) !important;
}

.emby-tab-button.show-focus:focus,
.emby-tab-button:hover {
  color: var(--accent) !important;
}

/*Theming Title Page*/

div#itemBackdrop {
  height: 100% !important;
  z-index: 0;
  position: absolute;
  background-position: top right;
  right: 0;
  width: 70vw;
  background-size: cover;
  background-attachment: scroll;
  mask-image: linear-gradient(to right, transparent, black),
    linear-gradient(to top, transparent, black);
  -webkit-mask-image: linear-gradient(to right, transparent, black),
    linear-gradient(to top, transparent, black);
  mask-composite: source-in;
  -webkit-mask-composite: source-in;
}

div#itemBackdrop::after {
  display: none;
}

.detailPageSecondaryContainer {
  margin: 0em !important;
  background: transparent;
}

div#itemDetailPage {
  background: #181818;
  overflow-x: hidden;
  position: relative;
}

.detailPagePrimaryContent {
  position: relative;
  width: 60vw;
  background: transparent;
  min-height: 68vh;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  text-shadow: 1px 1px 5px #181818;
  padding: 0 !important;
  font-size: 1.3em;
}

#itemDetailPage .detailVerticalSection:last-child {
  margin-bottom: 10vh;
}

.layout-mobile .detailPagePrimaryContent {
  width: 100%;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  padding: 0;
}

#itemDetailPage .itemExternalLinks {
  margin-top: 0 !important;
}

.layout-mobile #itemDetailPage .detailVerticalSection {
  background: transparent;
  width: 100%;
  padding: 0;
}

.itemName.parentNameLast {
  margin: 0;
  font-size: calc(135% * 2);
}

/* Center the mouseover buttons */

#castContent
  .cardOverlayButton.cardOverlayButton-hover.itemAction.paper-icon-button-light {
  margin: auto;
}

@media (max-width: 62.5em) {
  .section0 .cardText.cardTextCentered.cardText-first {
    height: 2.5em;
  }
}

@media all and (min-width: 32em) and (max-width: 100em) and (orientation: landscape) {
  .layout-mobile .detailPageSecondaryContainer {
    margin: 0;
  }
}

.detailPagePrimaryContainer.padded-left.padded-right.detailRibbon {
  font-size: smaller;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: hidden;
}
.layout-mobile .detailPageSecondaryContainer {
  margin: 0;
}
.detailPageWrapperContainer {
  border-spacing: 0;
  border-collapse: collapse;
  margin: 0 5vw;
}

.layout-mobile .detailPageWrapperContainer {
  margin-top: 0em;
  z-index: 0;
}

.layout-mobile .detailPagePrimaryContainer {
  z-index: -1;
}

.layout-mobile .primaryImageWrapper {
  flex: 0 0 auto;
}
/* ... */

